# jetpackJoyride

./: .gitignore  README.md  background_system.py  coin.py  difficulty_system.py  laser.py  main.py  player_info.txt  pyproject.toml  rocket.py  settings.py  storage.py  test_ai.py  test_background.py  train_ai.py  ui.py
ai/: __init__.py  agent_base.py  check_env.py  jetpack_env.py  prioritized_dqn_agent.py  prioritized_replay_buffer.py  rule_agent.py  test_model.py  test_ppo.py  test_prioritized_dqn.py  train_dqn.py  train_ppo.py  train_prioritized_dqn.py  train_sac.py
ai/models/: episode1500.pth  episode3600.pth  episode4700.pth
config/: settings.py  storage.py
core/: events.py  game.py  state.py
data/: player_info.txt
entities/: coin.py  laser.py  meteor.py  player.py  portal.py  projectiles.py  rocket.py
model/: runner_env.py  test_env.py
models/: best_model.pth
ppo_jetpack_tensorboard/PPO_0/: events.out.tfevents.1751713552.DESKTOP-URJ04MP.11664.0  events.out.tfevents.1751817888.LAPTOP-F446SVEV.36544.0  events.out.tfevents.1751818087.LAPTOP-F446SVEV.27052.0  events.out.tfevents.1751818592.LAPTOP-F446SVEV.23548.0  events.out.tfevents.1751818727.LAPTOP-F446SVEV.25108.0  events.out.tfevents.1751818901.LAPTOP-F446SVEV.28216.0  events.out.tfevents.1751822113.LAPTOP-F446SVEV.18272.0  events.out.tfevents.1751822235.LAPTOP-F446SVEV.17672.0  events.out.tfevents.1751822412.LAPTOP-F446SVEV.37984.0
systems/: meteor_system.py  physics.py  ui.py
