[project]
name = "jetpackjoyride"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
]
